2009-10-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: Changing a Grid
	  property (Row, RowSpan etc) on a UIElement invalidates its
	  measure. r: lewing.

2009-10-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTest.cs:
	* System.Windows.Controls/GridTestAuto.cs:
	* System.Windows.Controls/GridTestOrdering.cs: Add more grid
	  tests and enhance existing tests so that they check that the
	  final sizes of rows/cols are correct and the correct Size
	  argument is passed to MeasureOverride. r: spouliot

2009-10-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs:
	* System.Windows.Controls/GridTestOrdering.cs: Add some more
	  grid tests. r: rolf

2009-10-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestOrdering.cs: Added some more
	  measure ordering tests.

2009-10-09  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: File added MultiScaleImageAutomationPeerTest.cs.
	* System.Windows.Automation.Peers/MultiScaleImageAutomationPeerTest.cs: 
	Tests MultiScaleImageAutomationPeer.

	r: toshok

2009-10-09  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/SliderAutomationPeerTest.cs: 
	Subclassing RangeBaseAutomationPeerTest.

	r: toshok

2009-10-09  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/RadioButtonAutomationPeerTest.cs: 
	Testing SelectionItemPatternIdentifiers.IsSelectedProperty event.

	r: toshok

2009-10-09  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/ToggleButtonAutomationPeerTest.cs: 
	Testing TogglePatternIdentifiers.ToggleStateProperty event.

	r: toshok

2009-10-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs:
	* System.Windows.Controls/GridTestOrdering.cs: Add some more
	  tests to ensure we measure the elements in the grid in the
	  correct order. This is important because Auto rows/cols must