@@ -1,5 +1,10 @@
 2009-10-15  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/GridTestAuto.cs: Add two more grid
+	  tests when using Star and Auto rows.
+
+2009-10-15  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/GridTestAuto.cs: Changing a Grid
 	  property (Row, RowSpan etc) on a UIElement invalidates its
 	  measure. r: lewing.
